# ResumePilot

./: README.md
backend/: alembic.ini  pyproject.toml  test_job_endpoint.py
backend/alembic/: env.py
backend/alembic/versions/: add_job_description_enhanced_fields.py  add_user_profile_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  errors.py  security.py
backend/app/models/: __init__.py  activity_log.py  analysis.py  job.py  profile.py  resume.py  skill.py  user.py
backend/app/resume_analyser_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/app/routers/: admin.py  analysis.py  auth.py  jobs.py  profile.py  resumes.py
backend/app/schemas/: activity.py  analysis.py  auth.py  job.py  profile.py  resume.py  skill.py
backend/app/services/: __init__.py  analysis.py  jobs.py  profile.py  resumes.py
backend/app/services/ai/: __init__.py  embeddings.py  pdf_parser.py  scoring.py  skills.py
backend/app/utils/: __init__.py  storage.py
frontend/: .gitignore  ANALYSIS_UPGRADE.md  ANALYSIS_UPGRADE_REALISM.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/hooks/: useAuth.tsx
frontend/lib/: adminSession.ts  adminSessionEdge.ts  analysisEngine.test.ts  analysisEngine.ts  analysisEnhancer.ts  api.ts  dataConsistencyValidator.ts  demoData.ts  experienceRelevance.ts  impactCalculationEngine.ts  scoreTrendEngine.ts  skillCategorization.ts  smartRecommendations.ts  (+3 more)
(+78 files in other folders)
