[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resumepilot-backend"
version = "0.1.0"
description = "FastAPI backend for ResumePilot - AI-powered resume intelligence and job match analytics"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "SQLAlchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "redis>=5.0.4",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "PyPDF2>=3.0.0",
    "pdfplumber>=0.11.0",
    "openai>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "app"}
